--- a/huellitas/package.json
+++ b/huellitas/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-plugin-fonts": "^0.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -26,6 +27,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "sass": "^1.66.1",
+    "vite": "^4.4.9"
   }
 }
