--- a/huellitas/package.json
+++ b/huellitas/package.json
@@ -16,7 +16,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "vite-plugin-fonts": "^0.7.0"
   },
   "devDependencies": {
