--- a/huellitas/package.json
+++ b/huellitas/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "sweetalert2": "^11.7.26"
+    "react-router-dom": "^6.15.0",
+    "sweetalert2": "^11.7.27"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
