--- a/huellitas/package.json
+++ b/huellitas/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
+    "react-router-dom": "^6.15.0",
+    "sweetalert2": "^11.7.25"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
