--- a/huellitas/package.json
+++ b/huellitas/package.json
@@ -20,12 +20,22 @@
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "leaflet": "^1.9.4",
+
+    "@emailjs/browser": "^3.11.0",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
+    "json-server": "^0.17.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.15.0",
-    "vite-plugin-fonts": "^0.7.0"
+    "vite-plugin-fonts": "^0.7.0",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.15.0",
+    "sweetalert2": "^11.7.27"
+
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
